Bibsonomy;
Digitalocean;
Digitalspy;
Dreamwidth;
Dslreports;
Eksisozluk;
Elakiri;
Filmow;
Forum.hiveos;
Forum.hr;
Forum.itvdn;
Forum.popjustice;
Forums.opera;
Forums.tomshardware;
Gaiaonline;
Gays;
Gentlemint;
Govloop;
Hackenproof;
Hotcopper;
Hr;
Irc-galleria;
Kaskus;
Kinja;
Krstarica;
Librarything;
Listography;
Mactalk;
Mouthshut;
Nairaland;
Namepros;
NetworkInformatica;
Niketalk;
Pbnation;
Pinboard;
Plurk;
Pornhub;
Slashdot;
Suomi24;
Thestudentroom;
Totseans;
YandexBugbounty.
===================================================================================

v1.1.3_rus
* В html теперь доступна сортировка результатов: — по странам.
(Сортировка по умолчанию: — по алфавиту имён сайтов. 
Высокая визуализация результатов поиска; визуализация БД по опции '--list all').

* Добавлены новые опции: '--country; -с' и '--userload; -u'.
('--country; -с' — во время поиска в CLI (GNU/Linux/Termux) выводятся отсортированные флаги государств.
Результаты сортируются по странам, а не по алфавиту сайтов и сохраняются в html).
(--userload; -u' — указать файл.txt с именами разыскиваемых пользователей.)

* Изменены/отредактированы основные опции. 

* Добавлены в БС новые ресурсы:
11x2;
Armorgames;
Blackhatprotools;
Filmwatch;
Forum.xda;
freepo;
Gamefaqs;
Lib.reviews;
Rpggeek;
Videogamegeek.

* Почищена БД от дубликатов.
(В БД > 500 сайтов!!!).
===================================================================================

v1.1.2_rus
* Улучшена навигация по работе с html.

* Улучшен алгоритм детектирования.
(меньше ложных результатов на кириллическом username).

* Результаты поиска отсортированы по расширению.

* Добавлены в БС новые ресурсы:
1x;
Allrecipes;
Alternativeto;
Angara;
Armchairgm;
Autolada;
Codepen;
Cruisemates;
Fark;
Fatsecret;
Forum.allgaz;
Forum.modnaya;
Forumprosport;
Forum.wotanks;
Forum.ykt;
Forumyuristov;
Fotothing;
Freecodecamp;
Gapyear;
Infrance;
Interbasket;
Italia;
Life-dom2;
Lightstalking;
Lonelyplanet;
Mbclub;
Metacafe;
Myfitnesspal;
Peopleandcountries;