@@ -40,11 +40,13 @@ Nairaland;
 Namepros;
 NetworkInformatica;
 Niketalk;
+Partyflock;
 Pbnation;
 Pinboard;
 Plurk;
 Pornhub;
 Slashdot;
+Spaces;
 Suomi24;
 Thestudentroom;
 Totseans;
